# fast-ops

./: .clang-format  .clangd  .gitmodules  README.md  compile_commands.json  pyproject.toml  setup.py
benchmarks/: benchmark_flash_attention.py  benchmark_lion.py
fast_ops/flash_attention/: README.md  attention_ref.py  flash_attention.cpp  flash_attention.py  flash_attention_fwd.cu  flash_attention_triton.py
fast_ops/flash_attention/common/: dispatch.h  launch_utils.h
fast_ops/lion/: README.md  lion.cpp  lion_optimizer.py  lion_optimizer_ref.py  lion_update.cu
scripts/: fmt  gpt2_profile.py
tests/: test_flash_attention.py  test_flash_attention_triton.py  test_lion_optimizer.py
